force-app/main/default/objects/BMCServiceDesk__ScanTargetListMember__c/BMCServiceDesk__ScanTargetListMember__c.object-meta.xml
<CustomObject>
    <label>Scan Target List Member</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scan Target List Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>