force-app/main/default/objects/BMCServiceDesk__ScanTargetListMember__c/fields/BMCServiceDesk__ExcludedMembers__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ExcludedMembers__c</fullName>
    <description>To store the excluded members of the scan target list member.</description>
    <label>Excluded Members</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>