force-app/main/default/objects/BMCServiceDesk__ScanTargetListMember__c/fields/BMCServiceDesk__FKScanTargetList__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKScanTargetList__c</fullName>
    <label>Scan Target List</label>
    <referenceTo>BMCServiceDesk__ScanTargetList__c</referenceTo>
    <relationshipLabel>Scan Target List Members</relationshipLabel>
    <relationshipName>ScanTargetListMembers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>