force-app/main/default/objects/BMCServiceDesk__ScanTargetListMember__c/fields/BMCServiceDesk__IncludedMembers__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__IncludedMembers__c</fullName>
    <description>To store the included members of the scan target list member.</description>
    <label>Included Members</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>